# rust-chrome-extension

./: .gitignore  Cargo.toml  README.md  manifest.json  package.json  popup.html  popup.js
src/: lib.rs
